--- a/main/templates/report.html
+++ b/main/templates/report.html
@@ -84,54 +84,61 @@
             <div>图2-4&nbsp;全球确诊率增长曲线（a）、病死率增长曲线（b）</div>
             <div>注：确诊率为累计确诊人数占总人口的百分比，病死率为累计死亡人数占累计确诊人数的百分比。</div>
         </div>
-        <div id="2_5" style="width: 800px;height:430px;"></div>
-        <div>图 2-5&nbsp;全球累计确诊人数来源构成（显示前 15 个国家，包含法国养老院数据）</div>
+        <div class="row" style="width: 800px;">
+            <div id="2_5_a" class="col-6" style="margin: 0; padding: 0; height: 230px;"></div>
+            <div id="2_5_b" class="col-6" style="margin: 0; padding: 0; height: 230px;"></div>
+            <div class="col-6" style="text-align: center;">(a)</div>
+            <div class="col-6" style="text-align: center;">(b)</div>
+            <div>图2-5&nbsp;全球新增确诊人数增长曲线（a）、新增死亡人数增长曲线（b）</div>
+        </div>
         <div id="2_6" style="width: 800px;height:430px;"></div>
-        <div>图 2-6&nbsp;全球累计死亡人数来源构成（显示前 15 个国家，包含法国养老院数据）</div>
+        <div>图 2-6&nbsp;全球累计确诊人数来源构成（显示前 15 个国家，包含法国养老院数据）</div>
+        <div id="2_7" style="width: 800px;height:430px;"></div>
+        <div>图 2-7&nbsp;全球累计死亡人数来源构成（显示前 15 个国家，包含法国养老院数据）</div>
 
         <!--<h3>2.2 全球本周新增确诊<span class="14"><font>&nbsp;Null&nbsp;</font></span>例，死亡：<span class="16"><font>&nbsp;Null&nbsp;</font></span>例</h3>-->
         <h3>2.2 全球确诊率：<span class="4"><font>&nbsp;Null&nbsp;</font></span>，病死率：<span class="5"><font>&nbsp;Null&nbsp;</font></span></h3>
-        <div id="2_7" style="width: 800px;height:880px;"></div>
-        <div>图2-7&nbsp;各国确诊率（确诊率为累计确诊人数占总人口的百分比，仅显示累计确诊人数超过2000的国家中确诊率前20个国家）</div>
         <div id="2_8" style="width: 800px;height:880px;"></div>
-        <div>图2-8&nbsp;各国病死率（病死率为累计死亡人数占累计确诊人数的百分比，仅显示累计确诊人数超过2000的国家中病死率前20个国家）</div>
+        <div>图2-8&nbsp;各国确诊率（确诊率为累计确诊人数占总人口的百分比，仅显示累计确诊人数超过2000的国家中确诊率前20个国家）</div>
         <div id="2_9" style="width: 800px;height:880px;"></div>
-        <div>图2-9&nbsp;各国检测率（检测率为总检测数占总人口的百分比，仅显示累计确诊人数超过2000的国家中检测率前20个国家，部分国家检测数据更新不及时）</div>
+        <div>图2-9&nbsp;各国病死率（病死率为累计死亡人数占累计确诊人数的百分比，仅显示累计确诊人数超过2000的国家中病死率前20个国家）</div>
         <div id="2_10" style="width: 800px;height:880px;"></div>
-        <div>图2-10&nbsp;各国阳性率（阳性率为累计确诊人数占总检测数的百分比，仅显示累计确诊人数超过2000的国家中阳性率前20个国家，部分国家数据更新不及时）</div>
+        <div>图2-10&nbsp;各国检测率（检测率为总检测数占总人口的百分比，仅显示累计确诊人数超过2000的国家中检测率前20个国家，部分国家检测数据更新不及时）</div>
+        <div id="2_11" style="width: 800px;height:880px;"></div>
+        <div>图2-11&nbsp;各国阳性率（阳性率为累计确诊人数占总检测数的百分比，仅显示累计确诊人数超过2000的国家中阳性率前20个国家，部分国家数据更新不及时）</div>
 
         <h3>2.3 全球本周新增确诊：<span class="14"><font>&nbsp;Null&nbsp;</font></span>例，死亡：<span class="16"><font>&nbsp;Null&nbsp;</font></span>例</h3>
-        <div id="2_11" style="width: 800px;height:500px;"></div>
-        <div>图2-11&nbsp;本周全球每日新增确诊人数和新增死亡人数</div>
+        <div id="2_12" style="width: 800px;height:500px;"></div>
+        <div>图2-12&nbsp;本周全球每日新增确诊人数和新增死亡人数</div>
 
         <h3>2.4&nbsp;本周新增确诊主要来源：<span class="18"><font>&nbsp;Null&nbsp;</font></span>、<span class="20"><font>&nbsp;Null&nbsp;</font></span></h3>
-        <div id="2_12" style="width: 800px;height:430px;"></div>
-        <div>图2-12&nbsp;本周全球新增确诊人数来源构成（显示前15个国家，包含法国养老院数据）</div>
+        <div id="2_13" style="width: 800px;height:430px;"></div>
+        <div>图2-13&nbsp;本周全球新增确诊人数来源构成（显示前15个国家，包含法国养老院数据）</div>
 
         <h3>2.5&nbsp;本周新增死亡主要来源：<span class="22"><font>&nbsp;Null&nbsp;</font></span>、<span class="24"><font>&nbsp;Null&nbsp;</font></span></h3>
-        <div id="2_13" style="width: 800px;height:430px;"></div>
-        <div>图2-13&nbsp;本周全球新增死亡人数来源构成（显示前15个国家，包含法国养老院数据）</div>
+        <div id="2_14" style="width: 800px;height:430px;"></div>
+        <div>图2-14&nbsp;本周全球新增死亡人数来源构成（显示前15个国家，包含法国养老院数据）</div>
 
         <h3>2.6&nbsp;本周新增确诊增长最快：<span class="26"><font>&nbsp;Null&nbsp;</font></span>，新增死亡增长最快：<span class="30"><font>&nbsp;Null&nbsp;</font></span></h3>
-        <div id="2_14" style="width: 800px;"></div>
-        <div>图2-14&nbsp;本周较上周新增确诊人数增速（仅显示增速绝对值大于等于20%的国家）</div>
+        <div id="2_15" style="width: 800px;"></div>
+        <div>图2-15&nbsp;本周较上周新增确诊人数增速（仅显示增速绝对值大于等于20%的国家）</div>
         <div>注：本周较上周新增确诊人数增速=（本周新增确诊人数-上周新增确诊人数）/上周新增确诊人数</div>
 
-        <div id="2_15" style="width: 800px;"></div>
-        <div>图2-15&nbsp;本周较上周新增死亡人数增速（仅显示累计死亡人数超过100的国家中增速绝对值大于等于20%的国家）</div>
+        <div id="2_16" style="width: 800px;"></div>
+        <div>图2-16&nbsp;本周较上周新增死亡人数增速（仅显示累计死亡人数超过100的国家中增速绝对值大于等于20%的国家）</div>
         <div>注：本周较上周新增死亡人数增速=（本周新增死亡人数-上周新增死亡人数）/上周新增死亡人数</div>
 
         <h3>附录</h3>
-        <div id="2_16" style="width: 800px;height:850px;"></div>
-        <div>图2-16&nbsp;各国总检测数（截止至<span class="end_date_month"><font>&nbsp;Null&nbsp;</font></span>月<span class="end_date_day"><font>&nbsp;Null&nbsp;</font></span>日，仅显示累计确诊人数超过2000的国家中总检测数前20个国家，部分国家检测数据更新不及时）</div>
-        <div id="2_17" style="width: 800px;"></div>
-        <div>
-            图2-17&nbsp;本周较上周新增确诊人数增速（仅显示累计确诊人数超过1万的国家中增速绝对值大于等于20%的国家）<br>
-            注：本周较上周新增确诊人数增速=（本周新增确诊人数-上周新增确诊人数）/上周新增确诊人数
-        </div>
+        <div id="2_17" style="width: 800px;height:850px;"></div>
+        <div>图2-17&nbsp;各国总检测数（截止至<span class="end_date_month"><font>&nbsp;Null&nbsp;</font></span>月<span class="end_date_day"><font>&nbsp;Null&nbsp;</font></span>日，仅显示累计确诊人数超过2000的国家中总检测数前20个国家，部分国家检测数据更新不及时）</div>
         <div id="2_18" style="width: 800px;"></div>
         <div>
-            图2-18&nbsp;本周较上周新增死亡人数增速（仅显示累计确诊人数超过1万的国家中增速绝对值大于等于20%的国家）<br>
+            图2-18&nbsp;本周较上周新增确诊人数增速（仅显示累计确诊人数超过1万的国家中增速绝对值大于等于20%的国家）<br>
+            注：本周较上周新增确诊人数增速=（本周新增确诊人数-上周新增确诊人数）/上周新增确诊人数
+        </div>
+        <div id="2_19" style="width: 800px;"></div>
+        <div>
+            图2-19&nbsp;本周较上周新增死亡人数增速（仅显示累计确诊人数超过1万的国家中增速绝对值大于等于20%的国家）<br>
             注：本周较上周新增死亡人数增速=（本周新增死亡人数-上周新增死亡人数）/上周新增死亡人数
         </div>
     </div>
@@ -238,13 +245,18 @@
             linechart_rate(csvdata, "2_4_b")
         }
     });
-
-    d3.csv("{% static export_dir|add:'2-5.csv' %}", function (error, csvdata) {
+    d3.csv("{% static export_dir|add:'2-5-a.csv' %}", function (error, csvdata) {
         if(error){
             console.log(error);
         }else{
-            // console.log(csvdata);
-            pieChart(csvdata, "累计确诊人数", "2_5");
+            linechart_num(csvdata, "2_5_a")
+        }
+    });
+    d3.csv("{% static export_dir|add:'2-5-b.csv' %}", function (error, csvdata) {
+        if(error){
+            console.log(error);
+        }else{
+            linechart_num(csvdata, "2_5_b")
         }
     });
 
@@ -253,16 +265,16 @@
             console.log(error);
         }else{
             // console.log(csvdata);
-            pieChart(csvdata, "累计死亡人数", "2_6");
+            pieChart(csvdata, "累计确诊人数", "2_6");
         }
     });
 
-    d3.csv("{% static export_dir|add:'2-12.csv' %}", function (error, csvdata) {
+    d3.csv("{% static export_dir|add:'2-7.csv' %}", function (error, csvdata) {
         if(error){
             console.log(error);
         }else{
             // console.log(csvdata);
-            pieChart(csvdata, "本周新增确诊人数", "2_12");
+            pieChart(csvdata, "累计死亡人数", "2_7");
         }
     });
 
@@ -271,47 +283,7 @@
             console.log(error);
         }else{
             // console.log(csvdata);
-            pieChart(csvdata, "本周新增死亡人数", "2_13");
-        }
-    });
-
-    d3.csv("{% static export_dir|add:'2-7.csv' %}", function (error, csvdata) {
-        if(error){
-            console.log(error);
-        }else{
-            barchart(csvdata.slice(0,21), "确诊率", '2_7');
-        }
-    });
-
-    d3.csv("{% static export_dir|add:'2-8.csv' %}", function (error, csvdata) {
-        if(error){
-            console.log(error);
-        }else{
-            barchart(csvdata.slice(0,21), "病死率", '2_8');
-        }
-    });
-
-    d3.csv("{% static export_dir|add:'2-9.csv' %}", function (error, csvdata) {
-        if(error){
-            console.log(error);
-        }else{
-            barchart(csvdata.slice(0,21), "检测率", '2_9');
-        }
-    });
-
-    d3.csv("{% static export_dir|add:'2-10.csv' %}", function (error, csvdata) {
-        if(error){
-            console.log(error);
-        }else{
-            barchart(csvdata.slice(0,21), "阳性率", '2_10');
-        }
-    });
-
-    d3.csv("{% static export_dir|add:'2-11.csv' %}", function (error, csvdata) {
-        if(error){
-            console.log(error);
-        }else{
-            linechart(csvdata, '2_11');
+            pieChart(csvdata, "本周新增确诊人数", "2_13");
         }
     });
 
@@ -319,7 +291,48 @@
         if(error){
             console.log(error);
         }else{
-            bi_directional_barchart(csvdata, "本周较上周新增确诊人数增速", "2_14");
+            // console.log(csvdata);
+            pieChart(csvdata, "本周新增死亡人数", "2_14");
+        }
+    });
+
+    d3.csv("{% static export_dir|add:'2-8.csv' %}", function (error, csvdata) {
+        if(error){
+            console.log(error);
+        }else{
+            barchart(csvdata.slice(0,21), "确诊率", '2_8');
+        }
+    });
+
+    d3.csv("{% static export_dir|add:'2-9.csv' %}", function (error, csvdata) {
+        if(error){
+            console.log(error);
+        }else{
+            barchart(csvdata.slice(0,21), "病死率", '2_9');
+        }
+    });
+
+    d3.csv("{% static export_dir|add:'2-10.csv' %}", function (error, csvdata) {
+        if(error){
+            console.log(error);
+        }else{
+            barchart(csvdata.slice(0,21), "检测率", '2_10');
+        }
+    });
+
+    d3.csv("{% static export_dir|add:'2-11.csv' %}", function (error, csvdata) {
+        if(error){
+            console.log(error);
+        }else{
+            barchart(csvdata.slice(0,21), "阳性率", '2_11');
+        }
+    });
+
+    d3.csv("{% static export_dir|add:'2-12.csv' %}", function (error, csvdata) {
+        if(error){
+            console.log(error);
+        }else{
+            linechart(csvdata, '2_12');
         }
     });
 
@@ -327,7 +340,15 @@
         if(error){
             console.log(error);
         }else{
-            bi_directional_barchart(csvdata, "本周较上周新增死亡人数增速", "2_15");
+            bi_directional_barchart(csvdata, "本周较上周新增确诊人数增速", "2_15");
+        }
+    });
+
+    d3.csv("{% static export_dir|add:'2-16.csv' %}", function (error, csvdata) {
+        if(error){
+            console.log(error);
+        }else{
+            bi_directional_barchart(csvdata, "本周较上周新增死亡人数增速", "2_16");
         }
     });
 
@@ -335,7 +356,7 @@
         if(error){
             console.log(error);
         }else{
-            bi_directional_barchart(csvdata, "本周较上周新增确诊人数增速", "2_17");
+            bi_directional_barchart(csvdata, "本周较上周新增确诊人数增速", "2_18");
         }
     });
 
@@ -343,7 +364,7 @@
         if(error){
             console.log(error);
         }else{
-            bi_directional_barchart(csvdata, "本周较上周新增死亡人数增速", "2_18");
+            bi_directional_barchart(csvdata, "本周较上周新增死亡人数增速", "2_19");
         }
     });
 
@@ -351,7 +372,7 @@
         if(error){
             console.log(error);
         }else{
-            barchart_num(csvdata.slice(0,20), "总检测数", '2_16');
+            barchart_num(csvdata.slice(0,20), "总检测数", '2_17');
         }
     });
     var flag = true;
