--- a/main/templates/report.html
+++ b/main/templates/report.html
@@ -70,9 +70,9 @@
             <br>
             <h3>本周疫情要点</h3>
             全球累计确诊已达<span class="wan_2"><font>&nbsp;Null&nbsp;</font></span>万，病死<span class="wan_3"><font>&nbsp;Null&nbsp;</font></span>万。<br>
-            本周全球确诊<span class="14"><font>&nbsp;Null&nbsp;</font></span>例，新增确诊较上周<span class="15"><font>&nbsp;Null&nbsp;</font></span>。<br>
-            本周全球死亡<span class="16"><font>&nbsp;Null&nbsp;</font></span>例，新增死亡较上周<span class="17"><font>&nbsp;Null&nbsp;</font></span>。<br>
-            本报告所有疫情数据截至<span class="end_date_month"><font>&nbsp;Null&nbsp;</font></span>月<span class="end_date_day"><font>&nbsp;Null&nbsp;</font></span>日<span class="end_date_hour"><font>&nbsp;Null&nbsp;</font></span>时<span class="end_date_min"><font>&nbsp;Null&nbsp;</font></span>分。
+            全球本周确诊<span class="14"><font>&nbsp;Null&nbsp;</font></span>例，新增确诊较上周<span class="15"><font>&nbsp;Null&nbsp;</font></span>。<br>
+            全球本周死亡<span class="16"><font>&nbsp;Null&nbsp;</font></span>例，新增死亡较上周<span class="17"><font>&nbsp;Null&nbsp;</font></span>。<br>
+            本报告所有疫情数据截至<span class="end_date_month"><font>&nbsp;Null&nbsp;</font></span>月<span class="end_date_day"><font>&nbsp;Null&nbsp;</font></span>日<span class="36"><font>&nbsp;Null&nbsp;</font></span>时<span class="37"><font>&nbsp;Null&nbsp;</font></span>分。
         </div>
         <h3>2. 全球疫情现况</h3>
         <h3>2.1 全球累计确诊：<span class="2"><font>&nbsp;Null&nbsp;</font></span>例，死亡：<span class="3"><font>&nbsp;Null&nbsp;</font></span>例</h3>
@@ -97,54 +97,60 @@
             <div>图2-4&nbsp;全球确诊率增长曲线（a）、病死率增长曲线（b）</div>
             <div>注：确诊率为累计确诊人数占总人口的百分比，病死率为累计死亡人数占累计确诊人数的百分比。</div>
         </div>
-        <div class="row" style="width: 800px;">
-            <div id="2_5_a" class="col-6" style="margin: 0; padding: 0; height: 230px;"></div>
-            <div id="2_5_b" class="col-6" style="margin: 0; padding: 0; height: 230px;"></div>
-            <div class="col-6" style="text-align: center;">(a)</div>
-            <div class="col-6" style="text-align: center;">(b)</div>
-            <div>图2-5&nbsp;全球新增确诊人数增长曲线（a）、新增死亡人数增长曲线（b）</div>
-        </div>
+        
+        <div id="2_5" style="width: 800px;height:430px;"></div>
+        <div>图 2-5&nbsp;全球累计确诊人数来源构成（显示前 15 个国家，包含法国养老院数据）</div>
         <div id="2_6" style="width: 800px;height:430px;"></div>
-        <div>图 2-6&nbsp;全球累计确诊人数来源构成（显示前 15 个国家，包含法国养老院数据）</div>
-        <div id="2_7" style="width: 800px;height:430px;"></div>
-        <div>图 2-7&nbsp;全球累计死亡人数来源构成（显示前 15 个国家，包含法国养老院数据）</div>
+        <div>图 2-6&nbsp;全球累计死亡人数来源构成（显示前 15 个国家，包含法国养老院数据）</div>
 
         <!--<h3>2.2 全球本周新增确诊<span class="14"><font>&nbsp;Null&nbsp;</font></span>例，死亡：<span class="16"><font>&nbsp;Null&nbsp;</font></span>例</h3>-->
         <h3>2.2 全球确诊率：<span class="4"><font>&nbsp;Null&nbsp;</font></span>，病死率：<span class="5"><font>&nbsp;Null&nbsp;</font></span></h3>
+        <div id="2_7" style="width: 800px;height:880px;"></div>
+        <div>图2-7&nbsp;各国确诊率（确诊率为累计确诊人数占总人口的百分比，仅显示累计确诊人数超过2000的国家中确诊率前20个国家）</div>
         <div id="2_8" style="width: 800px;height:880px;"></div>
-        <div>图2-8&nbsp;各国确诊率（确诊率为累计确诊人数占总人口的百分比，仅显示累计确诊人数超过2000的国家中确诊率前20个国家）</div>
+        <div>图2-8&nbsp;各国病死率（病死率为累计死亡人数占累计确诊人数的百分比，仅显示累计确诊人数超过2000的国家中病死率前20个国家）</div>
         <div id="2_9" style="width: 800px;height:880px;"></div>
-        <div>图2-9&nbsp;各国病死率（病死率为累计死亡人数占累计确诊人数的百分比，仅显示累计确诊人数超过2000的国家中病死率前20个国家）</div>
+        <div>图2-9&nbsp;各国检测率（检测率为总检测数占总人口的百分比，仅显示累计确诊人数超过2000的国家中检测率前20个国家，部分国家检测数据更新不及时）</div>
         <div id="2_10" style="width: 800px;height:880px;"></div>
-        <div>图2-10&nbsp;各国检测率（检测率为总检测数占总人口的百分比，仅显示累计确诊人数超过2000的国家中检测率前20个国家，部分国家检测数据更新不及时）</div>
-        <div id="2_11" style="width: 800px;height:880px;"></div>
-        <div>图2-11&nbsp;各国阳性率（阳性率为累计确诊人数占总检测数的百分比，仅显示累计确诊人数超过2000的国家中阳性率前20个国家，部分国家数据更新不及时）</div>
+        <div>图2-10&nbsp;各国阳性率（阳性率为累计确诊人数占总检测数的百分比，仅显示累计确诊人数超过2000的国家中阳性率前20个国家，部分国家数据更新不及时）</div>
 
         <h3>2.3 全球本周新增确诊：<span class="14"><font>&nbsp;Null&nbsp;</font></span>例，死亡：<span class="16"><font>&nbsp;Null&nbsp;</font></span>例</h3>
-        <div id="2_12" style="width: 800px;height:500px;"></div>
-        <div>图2-12&nbsp;本周全球每日新增确诊人数和新增死亡人数</div>
+        <div class="row" style="width: 800px;">
+            <div id="2_11_a" class="col-6" style="margin: 0; padding: 0; height: 230px;"></div>
+            <div id="2_11_b" class="col-6" style="margin: 0; padding: 0; height: 230px;"></div>
+            <div class="col-6" style="text-align: center;">(a)</div>
+            <div class="col-6" style="text-align: center;">(b)</div>
+            <div>图2-11&nbsp;全球本周新增确诊人数增长曲线（a）、新增死亡人数增长曲线（b）</div>
+        </div>
+        <h3>2.4&nbsp;全球本周新增确诊主要来源：<span class="18"><font>&nbsp;Null&nbsp;</font></span>、<span class="20"><font>&nbsp;Null&nbsp;</font></span></h3>
+        <div id="2_12" style="width: 800px;height:430px;"></div>
+        <div>图2-12&nbsp;全球本周新增确诊人数来源构成（显示前15个国家，包含法国养老院数据）</div>
 
-        <h3>2.4&nbsp;本周新增确诊主要来源：<span class="18"><font>&nbsp;Null&nbsp;</font></span>、<span class="20"><font>&nbsp;Null&nbsp;</font></span></h3>
+        <h3>2.5&nbsp;全球本周新增死亡主要来源：<span class="22"><font>&nbsp;Null&nbsp;</font></span>、<span class="24"><font>&nbsp;Null&nbsp;</font></span></h3>
         <div id="2_13" style="width: 800px;height:430px;"></div>
-        <div>图2-13&nbsp;本周全球新增确诊人数来源构成（显示前15个国家，包含法国养老院数据）</div>
-
-        <h3>2.5&nbsp;本周新增死亡主要来源：<span class="22"><font>&nbsp;Null&nbsp;</font></span>、<span class="24"><font>&nbsp;Null&nbsp;</font></span></h3>
-        <div id="2_14" style="width: 800px;height:430px;"></div>
-        <div>图2-14&nbsp;本周全球新增死亡人数来源构成（显示前15个国家，包含法国养老院数据）</div>
+        <div>图2-13&nbsp;全球本周新增死亡人数来源构成（显示前15个国家，包含法国养老院数据）</div>
 
         <h3>2.6&nbsp;本周新增确诊增长最快：<span class="26"><font>&nbsp;Null&nbsp;</font></span>，新增死亡增长最快：<span class="30"><font>&nbsp;Null&nbsp;</font></span></h3>
-        <div id="2_15" style="width: 800px;"></div>
-        <div>图2-15&nbsp;本周较上周新增确诊人数增速（仅显示累计确诊人数超过1万的国家中增速绝对值大于等于20%的国家）</div>
+        <div id="2_14" style="width: 800px;"></div>
+        <div>图2-14&nbsp;本周较上周新增确诊人数增速（仅显示累计确诊人数超过1万的国家中增速绝对值大于等于20%的国家）</div>
         <div>注：本周较上周新增确诊人数增速=（本周新增确诊人数-上周新增确诊人数）/上周新增确诊人数</div>
 
-        <div id="2_16" style="width: 800px;"></div>
-        <div>图2-16&nbsp;本周较上周新增死亡人数增速（仅显示累计死亡人数超过300的国家中增速绝对值大于等于20%的国家）</div>
+        <div id="2_15" style="width: 800px;"></div>
+        <div>图2-15&nbsp;本周较上周新增死亡人数增速（仅显示累计死亡人数超过300的国家中增速绝对值大于等于20%的国家）</div>
         <div>注：本周较上周新增死亡人数增速=（本周新增死亡人数-上周新增死亡人数）/上周新增死亡人数</div>
+        <h3>2.7&nbsp;全球新增确诊和新增死亡走势图</h3>
+        <div class="row" style="width: 800px;">
+            <div id="2_16_a" class="col-6" style="margin: 0; padding: 0; height: 230px;"></div>
+            <div id="2_16_b" class="col-6" style="margin: 0; padding: 0; height: 230px;"></div>
+            <div class="col-6" style="text-align: center;">(a)</div>
+            <div class="col-6" style="text-align: center;">(b)</div>
+            <div>图2-16&nbsp;全球新增确诊人数增长曲线（a）、新增死亡人数增长曲线（b）</div>
+        </div>
 
         <h3>附录</h3>
         <div id="2_17" style="width: 800px;height:850px;"></div>
-        <div>图2-17&nbsp;各国总检测数（截止至<span class="end_date_month"><font>&nbsp;Null&nbsp;</font></span>月<span class="end_date_day"><font>&nbsp;Null&nbsp;</font></span>日，仅显示累计确诊人数超过2000的国家中总检测数前20个国家，部分国家检测数据更新不及时）</div>
-        <div id="2_18" style="width: 800px;"></div>
+        <div>图2-17&nbsp;各国总检测数（仅显示累计确诊人数超过2000的国家中总检测数前20个国家，部分国家检测数据更新不及时）</div>
+        <!-- <div id="2_18" style="width: 800px;"></div>
         <div>
             图2-18&nbsp;本周较上周新增确诊人数增速（仅显示累计确诊人数超过1万的国家中增速绝对值大于等于20%的国家）<br>
             注：本周较上周新增确诊人数增速=（本周新增确诊人数-上周新增确诊人数）/上周新增确诊人数
@@ -153,7 +159,7 @@
         <div>
             图2-19&nbsp;本周较上周新增死亡人数增速（仅显示累计确诊人数超过1万的国家中增速绝对值大于等于20%的国家）<br>
             注：本周较上周新增死亡人数增速=（本周新增死亡人数-上周新增死亡人数）/上周新增死亡人数
-        </div>
+        </div> -->
     </div>
 </div>
 
@@ -174,7 +180,8 @@
                 percent_rate: [15,17],
                 percent_int_num: [27,29,31,33],
                 countries: [6,8,10,12,18,20,22,24,26,28,30,32],
-                cases_3: [6,8,34]
+                cases_3: [6,8,34],
+                time: [36, 37]
             };
             let data = null;
             csvdata.forEach(function (value, index) {
@@ -207,6 +214,8 @@
                     data = Math.round(data * 100) + "%"
                 }else if (data_format.cases_3.includes(index)){
                     cases_3.push(data);
+                }else if (!data){
+                    return 
                 }
                 $("."+index).text(data);
             });
@@ -262,18 +271,27 @@
             linechart_rate(csvdata, "2_4_b")
         }
     });
-    d3.csv("{% static export_dir|add:'2-5-a.csv' %}", function (error, csvdata) {
+    d3.csv("{% static export_dir|add:'2-16-a.csv' %}", function (error, csvdata) {
         if(error){
             console.log(error);
         }else{
-            linechart_num(csvdata, "2_5_a")
+            linechart_num(csvdata, "2_16_a")
         }
     });
-    d3.csv("{% static export_dir|add:'2-5-b.csv' %}", function (error, csvdata) {
+    d3.csv("{% static export_dir|add:'2-16-b.csv' %}", function (error, csvdata) {
         if(error){
             console.log(error);
         }else{
-            linechart_num(csvdata, "2_5_b")
+            linechart_num(csvdata, "2_16_b")
+        }
+    });
+
+    d3.csv("{% static export_dir|add:'2-5.csv' %}", function (error, csvdata) {
+        if(error){
+            console.log(error);
+        }else{
+            // console.log(csvdata);
+            pieChart(csvdata, "累计确诊人数", "2_5");
         }
     });
 
@@ -282,16 +300,16 @@
             console.log(error);
         }else{
             // console.log(csvdata);
-            pieChart(csvdata, "累计确诊人数", "2_6");
+            pieChart(csvdata, "累计死亡人数", "2_6");
         }
     });
 
-    d3.csv("{% static export_dir|add:'2-7.csv' %}", function (error, csvdata) {
+    d3.csv("{% static export_dir|add:'2-12.csv' %}", function (error, csvdata) {
         if(error){
             console.log(error);
         }else{
             // console.log(csvdata);
-            pieChart(csvdata, "累计死亡人数", "2_7");
+            pieChart(csvdata, "本周新增确诊人数", "2_12");
         }
     });
 
@@ -300,16 +318,15 @@
             console.log(error);
         }else{
             // console.log(csvdata);
-            pieChart(csvdata, "本周新增确诊人数", "2_13");
+            pieChart(csvdata, "本周新增死亡人数", "2_13");
         }
     });
 
-    d3.csv("{% static export_dir|add:'2-14.csv' %}", function (error, csvdata) {
+    d3.csv("{% static export_dir|add:'2-7.csv' %}", function (error, csvdata) {
         if(error){
             console.log(error);
         }else{
-            // console.log(csvdata);
-            pieChart(csvdata, "本周新增死亡人数", "2_14");
+            barchart(csvdata.slice(0,21), "确诊率", '2_7');
         }
     });
 
@@ -317,7 +334,7 @@
         if(error){
             console.log(error);
         }else{
-            barchart(csvdata.slice(0,21), "确诊率", '2_8');
+            barchart(csvdata.slice(0,21), "病死率", '2_8');
         }
     });
 
@@ -325,7 +342,7 @@
         if(error){
             console.log(error);
         }else{
-            barchart(csvdata.slice(0,21), "病死率", '2_9');
+            barchart(csvdata.slice(0,21), "检测率", '2_9');
         }
     });
 
@@ -333,23 +350,30 @@
         if(error){
             console.log(error);
         }else{
-            barchart(csvdata.slice(0,21), "检测率", '2_10');
+            barchart(csvdata.slice(0,21), "阳性率", '2_10');
         }
     });
 
-    d3.csv("{% static export_dir|add:'2-11.csv' %}", function (error, csvdata) {
+    d3.csv("{% static export_dir|add:'2-11-a.csv' %}", function (error, csvdata) {
         if(error){
             console.log(error);
         }else{
-            barchart(csvdata.slice(0,21), "阳性率", '2_11');
+            linechart_num(csvdata, '2_11_a');
+        }
+    });
+    d3.csv("{% static export_dir|add:'2-11-b.csv' %}", function (error, csvdata) {
+        if(error){
+            console.log(error);
+        }else{
+            linechart_num(csvdata, '2_11_b');
         }
     });
 
-    d3.csv("{% static export_dir|add:'2-12.csv' %}", function (error, csvdata) {
+    d3.csv("{% static export_dir|add:'2-14.csv' %}", function (error, csvdata) {
         if(error){
             console.log(error);
         }else{
-            linechart(csvdata, '2_12');
+            bi_directional_barchart(csvdata, "本周较上周新增确诊人数增速", "2_14");
         }
     });
 
@@ -357,33 +381,25 @@
         if(error){
             console.log(error);
         }else{
-            bi_directional_barchart(csvdata, "本周较上周新增确诊人数增速", "2_15");
+            bi_directional_barchart(csvdata, "本周较上周新增死亡人数增速", "2_15");
         }
     });
 
-    d3.csv("{% static export_dir|add:'2-16.csv' %}", function (error, csvdata) {
-        if(error){
-            console.log(error);
-        }else{
-            bi_directional_barchart(csvdata, "本周较上周新增死亡人数增速", "2_16");
-        }
-    });
+    // d3.csv("{% static export_dir|add:'appendix-1.csv' %}", function (error, csvdata) {
+    //     if(error){
+    //         console.log(error);
+    //     }else{
+    //         bi_directional_barchart(csvdata, "本周较上周新增确诊人数增速", "2_18");
+    //     }
+    // });
 
-    d3.csv("{% static export_dir|add:'appendix-1.csv' %}", function (error, csvdata) {
-        if(error){
-            console.log(error);
-        }else{
-            bi_directional_barchart(csvdata, "本周较上周新增确诊人数增速", "2_18");
-        }
-    });
-
-    d3.csv("{% static export_dir|add:'appendix-2.csv' %}", function (error, csvdata) {
-        if(error){
-            console.log(error);
-        }else{
-            bi_directional_barchart(csvdata, "本周较上周新增死亡人数增速", "2_19");
-        }
-    });
+    // d3.csv("{% static export_dir|add:'appendix-2.csv' %}", function (error, csvdata) {
+    //     if(error){
+    //         console.log(error);
+    //     }else{
+    //         bi_directional_barchart(csvdata, "本周较上周新增死亡人数增速", "2_19");
+    //     }
+    // });
 
     d3.csv("{% static export_dir|add:'appendix-3.csv' %}", function (error, csvdata) {
         if(error){
