--- a/main/templates/report.html
+++ b/main/templates/report.html
@@ -110,46 +110,49 @@
         <div id="2_8" style="width: 800px;height:880px;"></div>
         <div>图2-8&nbsp;各国病死率（病死率为累计病死人数占累计确诊人数的百分比，仅显示累计确诊人数超过2000的国家中病死率前20个国家）</div>
         <div id="2_9" style="width: 800px;height:880px;"></div>
-        <div>图2-9&nbsp;各国检测率（检测率为累计检测数占总人口的百分比，仅显示累计确诊人数超过2000的国家中检测率前20个国家，部分国家检测数据更新不及时）</div>
+        <div>图2-9&nbsp;各国治愈率（检测率为累计治愈数占累计确诊人数的百分比，仅显示累计确诊人数超过2000的国家中检测率前20个国家，部分国家数据更新不及时）</div>
+
         <div id="2_10" style="width: 800px;height:880px;"></div>
-        <div>图2-10&nbsp;各国阳性率（阳性率为累计确诊人数占累计检测数的百分比，仅显示累计确诊人数超过2000的国家中阳性率前20个国家，部分国家数据更新不及时）</div>
+        <div>图2-10&nbsp;各国检测率（检测率为累计检测数占总人口的百分比，仅显示累计确诊人数超过2000的国家中检测率前20个国家，部分国家数据更新不及时）</div>
+        <div id="2_11" style="width: 800px;height:880px;"></div>
+        <div>图2-11&nbsp;各国阳性率（阳性率为累计确诊人数占累计检测数的百分比，仅显示累计确诊人数超过2000的国家中阳性率前20个国家，部分国家数据更新不及时）</div>
 
         <h3>2.3&nbsp;全球本周新增确诊：<span class="14"><font>&nbsp;Null&nbsp;</font></span>例，病死：<span class="16"><font>&nbsp;Null&nbsp;</font></span>例</h3>
         <div class="row" style="width: 800px;">
-            <div id="2_11_a" class="col-6" style="margin: 0; padding: 0; height: 230px;"></div>
-            <div id="2_11_b" class="col-6" style="margin: 0; padding: 0; height: 230px;"></div>
+            <div id="2_12_a" class="col-6" style="margin: 0; padding: 0; height: 230px;"></div>
+            <div id="2_12_b" class="col-6" style="margin: 0; padding: 0; height: 230px;"></div>
             <div class="col-6" style="text-align: center;">(a)</div>
             <div class="col-6" style="text-align: center;">(b)</div>
-            <div>图2-11&nbsp;全球本周新增确诊人数增长曲线（a）、新增病死人数增长曲线（b）</div>
+            <div>图2-12&nbsp;全球本周新增确诊人数增长曲线（a）、新增病死人数增长曲线（b）</div>
         </div>
         <h3>2.4&nbsp;全球本周新增确诊主要来源：<span class="18"><font>&nbsp;Null&nbsp;</font></span>、<span class="20"><font>&nbsp;Null&nbsp;</font></span></h3>
-        <div id="2_12" style="width: 800px;height:430px;"></div>
-        <div>图2-12&nbsp;全球本周新增确诊人数来源构成（显示前15个国家，包含法国养老院数据）</div>
+        <div id="2_13" style="width: 800px;height:430px;"></div>
+        <div>图2-13&nbsp;全球本周新增确诊人数来源构成（显示前15个国家，包含法国养老院数据）</div>
 
         <h3>2.5&nbsp;全球本周新增病死主要来源：<span class="22"><font>&nbsp;Null&nbsp;</font></span>、<span class="24"><font>&nbsp;Null&nbsp;</font></span></h3>
-        <div id="2_13" style="width: 800px;height:430px;"></div>
-        <div>图2-13&nbsp;全球本周新增病死人数来源构成（显示前15个国家，包含法国养老院数据）</div>
+        <div id="2_14" style="width: 800px;height:430px;"></div>
+        <div>图2-14&nbsp;全球本周新增病死人数来源构成（显示前15个国家，包含法国养老院数据）</div>
 
         <h3>2.6&nbsp;本周新增确诊增长最快：<span class="26"><font>&nbsp;Null&nbsp;</font></span>，新增病死增长最快：<span class="30"><font>&nbsp;Null&nbsp;</font></span></h3>
-        <div id="2_14" style="width: 800px;"></div>
-        <div>图2-14&nbsp;本周较上周新增确诊人数增速（仅显示累计确诊人数超过1万的国家中增速绝对值大于等于20%的国家）</div>
+        <div id="2_15" style="width: 800px;"></div>
+        <div>图2-15&nbsp;本周较上周新增确诊人数增速（仅显示累计确诊人数超过1万且本周新增确诊人数超过500的国家中增速绝对值大于等于20%的国家</div>
         <div>注：本周较上周新增确诊人数增速=（本周新增确诊人数-上周新增确诊人数）/上周新增确诊人数</div>
 
-        <div id="2_15" style="width: 800px;"></div>
-        <div>图2-15&nbsp;本周较上周新增病死人数增速（仅显示累计病死人数超过300的国家中增速绝对值大于等于20%的国家）</div>
+        <div id="2_16" style="width: 800px;"></div>
+        <div>图2-16&nbsp;本周较上周新增确诊人数增速（仅显示累计确诊人数超过1万且本周新增确诊人数超过500的国家中增速绝对值大于等于20%的国家）</div>
         <div>注：本周较上周新增病死人数增速=（本周新增病死人数-上周新增病死人数）/上周新增病死人数</div>
         <h3>2.7&nbsp;全球新增确诊和新增病死走势图</h3>
         <div class="row" style="width: 800px;">
-            <div id="2_16_a" class="col-6" style="margin: 0; padding: 0; height: 230px;"></div>
-            <div id="2_16_b" class="col-6" style="margin: 0; padding: 0; height: 230px;"></div>
+            <div id="2_17_a" class="col-6" style="margin: 0; padding: 0; height: 230px;"></div>
+            <div id="2_17_b" class="col-6" style="margin: 0; padding: 0; height: 230px;"></div>
             <div class="col-6" style="text-align: center;">(a)</div>
             <div class="col-6" style="text-align: center;">(b)</div>
-            <div>图2-16&nbsp;全球新增确诊人数增长曲线（a）、新增病死人数增长曲线（b）</div>
+            <div>图2-17&nbsp;全球新增确诊人数增长曲线（a）、新增病死人数增长曲线（b）</div>
         </div>
 
         <h3>附录</h3>
-        <div id="2_17" style="width: 800px;height:858px;"></div>
-        <div>图2-17&nbsp;各国累计检测数（仅显示累计确诊人数超过2000的国家中累计检测数前20个国家，部分国家检测数据更新不及时）</div>
+        <div id="2_18" style="width: 800px;height:858px;"></div>
+        <div>图2-18&nbsp;各国累计检测数（仅显示累计确诊人数超过2000的国家中累计检测数前20个国家，部分国家检测数据更新不及时）</div>
         <!-- <div id="2_18" style="width: 800px;"></div>
         <div>
             图2-18&nbsp;本周较上周新增确诊人数增速（仅显示累计确诊人数超过1万的国家中增速绝对值大于等于20%的国家）<br>
@@ -271,20 +274,7 @@
             linechart_rate(csvdata, "2_4_b")
         }
     });
-    d3.csv("{% static export_dir|add:'2-16-a.csv' %}", function (error, csvdata) {
-        if(error){
-            console.log(error);
-        }else{
-            linechart_num(csvdata, "2_16_a")
-        }
-    });
-    d3.csv("{% static export_dir|add:'2-16-b.csv' %}", function (error, csvdata) {
-        if(error){
-            console.log(error);
-        }else{
-            linechart_num(csvdata, "2_16_b")
-        }
-    });
+    
 
     d3.csv("{% static export_dir|add:'2-5.csv' %}", function (error, csvdata) {
         if(error){
@@ -304,21 +294,21 @@
         }
     });
 
-    d3.csv("{% static export_dir|add:'2-12.csv' %}", function (error, csvdata) {
-        if(error){
-            console.log(error);
-        }else{
-            // console.log(csvdata);
-            pieChart(csvdata, "本周新增确诊人数", "2_12");
-        }
-    });
-
     d3.csv("{% static export_dir|add:'2-13.csv' %}", function (error, csvdata) {
         if(error){
             console.log(error);
         }else{
             // console.log(csvdata);
-            pieChart(csvdata, "本周新增病死人数", "2_13");
+            pieChart(csvdata, "本周新增确诊人数", "2_13");
+        }
+    });
+
+    d3.csv("{% static export_dir|add:'2-14.csv' %}", function (error, csvdata) {
+        if(error){
+            console.log(error);
+        }else{
+            // console.log(csvdata);
+            pieChart(csvdata, "本周新增病死人数", "2_14");
         }
     });
 
@@ -337,43 +327,41 @@
             barchart(csvdata.slice(0,21), "病死率", '2_8');
         }
     });
-
     d3.csv("{% static export_dir|add:'2-9.csv' %}", function (error, csvdata) {
         if(error){
             console.log(error);
         }else{
-            barchart(csvdata.slice(0,21), "检测率", '2_9');
+            barchart(csvdata.slice(0,21), "治愈率", '2_9');
         }
     });
-
     d3.csv("{% static export_dir|add:'2-10.csv' %}", function (error, csvdata) {
         if(error){
             console.log(error);
         }else{
-            barchart(csvdata.slice(0,21), "阳性率", '2_10');
+            barchart(csvdata.slice(0,21), "检测率", '2_10');
         }
     });
 
-    d3.csv("{% static export_dir|add:'2-11-a.csv' %}", function (error, csvdata) {
+    d3.csv("{% static export_dir|add:'2-11.csv' %}", function (error, csvdata) {
         if(error){
             console.log(error);
         }else{
-            linechart_num_week(csvdata, '2_11_a');
-        }
-    });
-    d3.csv("{% static export_dir|add:'2-11-b.csv' %}", function (error, csvdata) {
-        if(error){
-            console.log(error);
-        }else{
-            linechart_num_week(csvdata, '2_11_b');
+            barchart(csvdata.slice(0,21), "阳性率", '2_11');
         }
     });
 
-    d3.csv("{% static export_dir|add:'2-14.csv' %}", function (error, csvdata) {
+    d3.csv("{% static export_dir|add:'2-12-a.csv' %}", function (error, csvdata) {
         if(error){
             console.log(error);
         }else{
-            bi_directional_barchart(csvdata, "本周较上周新增确诊人数增速", "2_14");
+            linechart_num_week(csvdata, '2_12_a');
+        }
+    });
+    d3.csv("{% static export_dir|add:'2-12-b.csv' %}", function (error, csvdata) {
+        if(error){
+            console.log(error);
+        }else{
+            linechart_num_week(csvdata, '2_12_b');
         }
     });
 
@@ -381,7 +369,29 @@
         if(error){
             console.log(error);
         }else{
-            bi_directional_barchart(csvdata, "本周较上周新增病死人数增速", "2_15");
+            bi_directional_barchart(csvdata, "本周较上周新增确诊人数增速", "2_15");
+        }
+    });
+
+    d3.csv("{% static export_dir|add:'2-16.csv' %}", function (error, csvdata) {
+        if(error){
+            console.log(error);
+        }else{
+            bi_directional_barchart(csvdata, "本周较上周新增病死人数增速", "2_16");
+        }
+    });
+    d3.csv("{% static export_dir|add:'2-17-a.csv' %}", function (error, csvdata) {
+        if(error){
+            console.log(error);
+        }else{
+            linechart_num(csvdata, "2_17_a")
+        }
+    });
+    d3.csv("{% static export_dir|add:'2-17-b.csv' %}", function (error, csvdata) {
+        if(error){
+            console.log(error);
+        }else{
+            linechart_num(csvdata, "2_17_b")
         }
     });
 
@@ -405,7 +415,7 @@
         if(error){
             console.log(error);
         }else{
-            barchart_num(csvdata.slice(0,20), "累计检测数", '2_17');
+            barchart_num(csvdata.slice(0,20), "累计检测数", '2_18');
         }
     });
     var flag = true;
